Changes for 4.0.0alpha1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.4.1rc1

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), French, Italian, Japanese, Korean, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBXNEXT-3987] fixed wrong response and error message when invalid or unavailable dashboardid has been requested (miks)
..F....... [ZBX-12593] fixed overlay window displaying on different browsers and removed horizontal scrollbar from widget configuration dialogue (Andžs, Ivo)
A.F....... [ZBX-12430] fixed error when linking one template to another in template edit form (gcalenko)
.........T [ZBXNEXT-3920] fixed extra new lines in Templates (vso, vzhuravlev)
..F....... [ZBX-12588] fixed clock and map widget scaling on Safari (Ivo)
.......PS. [ZBX-12574] fixed crash when linking templates with web scenarios during auto registration (vso)
..F....... [ZBX-12433] fixed XML import of web scenarios (vjaceslavs)
.......PS. [ZBX-12524] fixed DB upgrade patch for map shapes on DB2 (vjaceslavs)
.......PS. [ZBXNEXT-3006] fixed multiple issues with dependent items (vjaceslavs)
..F....... [ZBX-12439] fixed macro name field length in host configuration form (gcalenko)

--------------------------------------------------------------------------------
Changes for 3.4.0

3.4.0rc2 was released as 3.4.0 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.0rc2

Bug fixes:
A.F....... [ZBXNEXT-3883] fixed dependent trigger with dependent item deletion; dependent item recursion message; dependent item massupdate form master item being reset on error (gcalenko)
..F....... [ZBX-12506] fixed wrong top position of the period selection box on the graphs after closing/opening filter (vmurzins)