@@ -128,6 +128,7 @@ jQuery(function($) {
 					return this.each(function() {
 						var $this = $(this);
 
+						options['map_options']['canvas']['useViewBox'] = !IE;
 						widget_data['map_instance'] = new SVGMap(options['map_options']);
 						widget_data['is_refreshing'] = false;
 						$this.data('widgetData', widget_data);
