@@ -41,16 +41,25 @@ function SVGCanvas(options, shadowBuffer) {
 	if (typeof options.mask !== 'undefined') {
 		this.mask = (options.mask === true);
 	}
+	if (typeof options.useViewBox !== 'boolean') {
+		options.useViewBox = false;
+	}
 
 	this.buffer = null;
 
-	this.root = this.createElement('svg', {
-		'viewBox': '0 0 ' + options.width + ' ' + options.height,
-		'width': '100%',
-		'height': '100%',
-		'style': 'max-width: ' + options.width + 'px; max-height: ' + options.height + 'px;'
-	}, null);
+	var svg_options = options.useViewBox
+		? {
+			'viewBox': '0 0 ' + options.width + ' ' + options.height,
+			'width': '100%',
+			'height': '100%',
+			'style': 'max-width: ' + options.width + 'px; max-height: ' + options.height + 'px;'
+		}
+		: {
+			'width': options.width,
+			'height': options.height
+		};
 
+	this.root = this.createElement('svg', svg_options, null);
 	if (shadowBuffer === true) {
 		this.buffer = this.root.add('g', {
 			class: 'shadow-buffer',
